Update book method
